tools/tests/ui/fail/l1087.cnf
// Test file for error code: L1087
// Expected error: Underflow Constraint character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
